<resources>
    <string name="app_name">rudolph</string>
    <string name="quick_find_button">quick find</string>
    <string name="in_depth_search_button">in-depth search</string>
    <string name="search_screen">\"explore\"</string>
    <string name="gift_screen">find_gift</string>
    <string name="profiles_screen">\"see_profiles\"</string>
    <string name="settings">settings</string>
    <string name="email_address">email address</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="signup">sign up</string>
    <string name="new_user_prompt"><u>New user? Click here to create an account</u></string>
    <string name="create_an_account">create an account</string>
    <string name="first_name">first name</string>
    <string name="new_password">password (at least 6 chars)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_image">profile_image</string>
    <string name="login_incomplete_fields">Please fill out all fields</string>
    <string name="login_failed">Authentication failed</string>
    <string name="login_new_user_failed">Please try again.</string>
    <string name="add_profile_button">add_profile</string>
    <string name="profile_header">People</string>
    <string name="new_person_prompt">Add a new person</string>
    <string name="new_profile_done">done</string>
    <string name="first_name_prompt">First Name</string>
    <string name="last_name_prompt">Last Name</string>
    <string name="birthday_prompt">Birthday</string>
<<<<<<< HEAD
=======
    <string name="interests_prompt">Interests</string>
    <string-array name="interests_array">
        <item>Select</item>
        <item>Sports</item>
        <item>Art</item>
        <item>Travel</item>
        <item>Video games</item>
        <item>Nature</item>
        <item>Music</item>
        <item>Reading</item>
        <item>Cooking</item>
    </string-array>
>>>>>>> 713b8e1fcc6f8bed6ad7815f4df6a06b6a31eebc
</resources>