<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark">

    <View
        android:id="@+id/gift_image"
        android:layout_width="100dp"
        android:layout_height="95dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="60dp"
        android:background="@drawable/ic_gift"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="35dp"
        android:text="@string/app_name"
        android:textSize="36sp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gift_image"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:paddingStart="8dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/email_address"
        android:layout_marginHorizontal="80dp"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        android:layout_marginTop="50dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:paddingStart="8dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/password"
        android:layout_marginHorizontal="80dp"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        android:layout_marginTop="50dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        android:background="@drawable/button_background"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"/>


    <TextView
        android:id="@+id/tvNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="20dp"
        android:text="@string/new_user_prompt"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/brown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        android:onClick="onClickNewUser"
        android:clickable="true"
        android:focusable="true" />








</androidx.constraintlayout.widget.ConstraintLayout>