<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    tools:context=".Profiles.NewProfileFragment"
    android:layout_marginBottom="20dp">

    <androidx.appcompat.widget.Toolbar
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:titleTextColor="@android:color/darker_gray"
        app:title="@string/new_person_prompt"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>


    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:background="@drawable/blank_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/labelFirstName"
        android:layout_marginTop="30dp"
        android:text="@string/first_name_prompt"
        android:textColor="@color/black"
        android:layout_marginStart="24dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/profilePic"/>

    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        android:background="@drawable/edit_text_bg_light_bg"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="100dp"
        android:hint="@string/first_name_prompt"
        android:paddingStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/labelFirstName"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/labelLastName"
        android:layout_marginTop="20dp"
        android:text="@string/last_name_prompt"
        android:textColor="@color/black"
        android:layout_marginStart="24dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/firstName"/>

    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        android:background="@drawable/edit_text_bg_light_bg"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="100dp"
        android:hint="@string/last_name_prompt"
        android:paddingStart="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/labelLastName"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/labelBirthday"
        android:layout_marginTop="40dp"
        android:text="@string/birthday_prompt"
        android:textColor="@color/black"
        android:layout_marginStart="24dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/lastName"/>

    <EditText
        android:id="@+id/enterBirthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        android:background="@drawable/edit_text_bg_light_bg"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="250dp"
        android:hint="@string/birthday_prompt"
        android:layout_marginTop="5dp"
        android:paddingStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/labelBirthday"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="date"/>

    <DatePicker
        android:id="@+id/birthdayPicker"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        app:layout_constraintTop_toBottomOf="@id/lastName"
        app:layout_constraintStart_toEndOf="@id/enterBirthday"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/labelInterests"
        android:layout_marginTop="40dp"
        android:text="@string/interests_prompt"
        android:textColor="@color/black"
        android:layout_marginStart="24dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/enterBirthday"/>

    <Spinner
        android:id="@+id/interests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/labelInterests"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/spinner_bg"
        android:layout_marginEnd="20dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/interests"/>




</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>